# FDO1

./: .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
fdo-aas-adapter/: README.md  example.py
fdo-aas-adapter/.docker/: Dockerfile
fdo-aas-adapter/fdo_adapter/: fdo_provider.py
fdo-doip-b2share-adapter/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fdo-doip-b2share-adapter/fdo_doip_b2share_adapter/: models.py  server.py
fdo-doip-request-models/: LICENCE  README.md
fdo-edc-adapter/: .gitignore  README.md  settings.gradle.kts
fdo-edc-adapter/app/: build.gradle.kts
fdo-local-testbed/: .env  .gitmodules  Makefile  README.md  tutorial.md
fdo-manager-clients/: README.md
fdo-manager-deploy/: README.md  docker-compose.yaml
fdo-manager-e2e-tests/: .gitlab-ci.yml  .gitmodules  LICENSE  README.md  install_python_client.sh  requirements.txt  run_tests.sh
fdo-manager-sdk/: .gitignore  .gitlab-ci.yml  .test.cordra.json.example  README.md  pom.xml
fdo-manager-service/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pom.xml
fdo-manager-webui/: .eslintrc.js  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
fdo-s3-doip-adapter/: .gitignore  .gitlab-ci.yml  README.md
fdo-test-handle-system/: .env  .gitignore  Makefile  README.md  docker-compose.yml
fdo-testbed-jupyter-notebooks/: Create_FDO_workflow.ipynb  LICENSE  README.md
(+269 files in other folders)
